--- a/src/styles.scss
+++ b/src/styles.scss
@@ -279,7 +279,7 @@ nav {
             width: 100%;
             height: 100vh;
             position: fixed;
-            top: -100%;
+            top: -100vh;
             left: 0;
             padding-top: 10vh;
             z-index: -3;
