--- a/src/styles.scss
+++ b/src/styles.scss
@@ -645,6 +645,11 @@ h2 {
   .product_content {
     @include spacearound;
     flex-direction: row;
+    @media (max-width:768px) {
+      .product_content{
+        flex-direction: column;
+      }
+    }
     .product_images {
       .suitcases {
         display: flex;
@@ -683,9 +688,7 @@ h2 {
               }
             }
             @media (max-width:768px) {
-              .product_content {
-                flex-direction: column;
-              }
+              
               
               .big_img {
                 width: 80vw;
