--- a/src/styles.scss
+++ b/src/styles.scss
@@ -684,7 +684,10 @@ h2 {
             }
             @media (max-width:768px) {
               .product_content{
+                display: flex;
                 flex-direction: column;
+                align-items: center;
+                justify-content: space-around
               }
               
               .big_img {
