--- a/src/styles.scss
+++ b/src/styles.scss
@@ -657,7 +657,7 @@ h2 {
             width: 70vw !important;
           }
           .small_img {
-            width: 7vw;
+            width: 7vw !important;
           }
         }
       }
