--- a/src/styles.scss
+++ b/src/styles.scss
@@ -656,6 +656,7 @@ h2 {
           ul {
             width: 80vw;
             li {
+              width: 15vw !important;
               padding-left: 0;
               padding-right: 0;
               margin-left: 0;
